added a qr-code to the footer of the motherfools kiosk

--- a/web/motherfools/index.html
+++ b/web/motherfools/index.html
@@ -47,9 +47,14 @@
 	</div>
 </div>
 <div id="footer">
-<p>This is an experimental effort to offer you real-time bus information while you enjoy your coffee!
-Your feedback on the accuracy and value of the information will help improve the service.</p>
-<p>Special thanks to The City of Madison for great buses and for providing the GPS data that powers this service</p>
+  <table class="resources">
+    <tr>
+      <td>
+        <img style="-webkit-user-select: none" src="https://chart.googleapis.com/chart?cht=qr&amp;chs=100x100&amp;chl=http://smsmybus.com/motherfools&chld=L|0">
+      </td>
+      <td>This is an experimental effort to offer you real-time bus information while you enjoy your coffee! Your feedback on the accuracy and value of the information will help improve the service.<br/>Special thanks to The City of Madison for great buses and for providing the GPS data that powers this service</td>
+    </tr>
+  </table>
    <div id="powered-by">
      <a href=http://mymetrobus.com><img src="/img/madison_metro.png" alt="Madison Metro" height="30"></a>
      <a href=http://smsmybus.com><img src="/img/smsmybus.png" alt="smsmybus.com logo" height="30"></a>
