removed SMS service details from home page

--- a/web/index.html
+++ b/web/index.html
@@ -15,50 +15,21 @@
 
 <div id="page-container">
  <div id="header">
- <center><img src="img/header.png" alt="smsmybus logo"></center>
  </div>
  <div id="description">
   <center>SMSMyBus is a mobile telephone application that lets you find real time bus arrivals for 
-  the <a class="description-anchor" href=http://www.cityofmadison.com/metro/>Madison Metro</a>.
-  Just text your request to 608.467.1603 to receive <i>real time</i> arrival estimates.</center>
-  <div id="by">
-  <div id="bybus">
-   <h2>locate by bus</h2>
-   &lt;route #&gt; &lt;stop #&gt;
-   <div id="example">
-    Find the arrival for a specific bus route at a specific bus stop. 
-    <p>For example, texting "19 1787" will identify the next three buses to arrive at
-    Pinckney/Main on the Square.
-   </div>
-  </div>
-  <div id="bystop">
-   <h2>locate by stop</h2>
-   &lt;stop #&gt;
-   <div id="example">
-    Find the arrivals of the next four buses at a specific bus stop. 
-    <p>For example, texting "1787" will identify the next four buses to arrive at 
-    Pinckney/Main on the Square.
-   </div>
-  </div>
-  </div>
+  the <a class="description-anchor" href=http://www.cityofmadison.com/metro/>Madison Metro</a>.</center>
  </div>
- <div id="spacer"></div>
  
  <div id="extras">
   <div id="other-interfaces">
+    <p>I've turned off the SMS interface due to cost constraints. If you'd like to use SMS, you can always donate to the project using the PayPal link at the bottom, and I'll get you setup. </p>
     <h2>More ways to find your bus!</h2>
-    <p>The following methods can be used to query the Metro system as well. Follow the same rules as above
-    when you're searching for a bus at a particular stop or <i>all</i> buses for a stop.</p>
     <h3>Google Talk / Jabber</h3>
     <p>Jabber your query to <strong>smsmybus@appspot.com</strong>, and we'll reply back with your results. The syntax is identical to the SMS syntax.</p>
     <h3>Email</h3>
     <p>Email your query to <a href=mailto:request@smsmybus.com>request@smsmybus.com</a> with the 
     details in the subject line, and I'll reply with your details.</p>
-    <h3>Phone (beta)</h3>
-    <p>Dial in using the same number - 608.467.1603 - and follow the prompts. Please <a href=mailto:feedback@smsmybus.com>send me your feedback</a>.</p>
-    <h2>Invite your friends</h2>
-    <p>You can invite your friends to use the SMS service by sending me their mobile number. Just
-    send me a text with "invite ##########" in the message and I'll forward an invitation to them.</p>
     <h2>Are you a developer?</h2>
     <p>Take advantage of the <a href=/api/>SMSMyBus API</a> to build your own transit application for the Madison Metro.</p>
     <p>The API provides access to real-time arrival estimates, location data, and more. Go check out the <a href=/api/>documentation</a>.</p>
