fixed bad formatting on website

--- a/public/index.html
+++ b/public/index.html
@@ -64,23 +64,25 @@
             <p>There are a variety of ways you can find your bus when you're on the go. All of these tools give you real-time arrival estimates based on the actual location of your bus. Simply send the stop ID (and optionally the route) to one of the following services.</p>
             <div class="container-fluid">
               <div class="row-fluid">
-                <div class="span4 hero-unit">
-                  <p>Find a specific route at a stop</p>
-                  <small>Find the #3 bus at stop 1101:</small>
-                  <p><code> 3 1101 </code></p>
+                <div class="span6">
+                  <h3>To find a specific route at a stop,</h3>
+                  <p>Send route + stop</p>
+                  <small>Example: Send <code>3 1101</code> to find the #3 bus at stop 1101:</small>
                 </div>
-                <div class="span4 hero-unit">
-                  <p>Find all routes at a stop</p>
-                  <small>Find all buses at stop 1101:</small>
-                  <p><code> 1101 </code></p>
+                <div class="span6">
+                  <h3>To find all routes at a stop,</h3>
+                  <p>Send the stop number</p>
+                  <small>Example: Send <code>1101</code> to find all buses at stop 1101</small>
                 </div>
               </div>
             </div>
+            <hr>
             <div class="row">
               <div class="span4">
-                <h2>Text Messages</h2>
+                <h2>Text Messages <small>608.467.1603</small></h2>
                  <p><center><img src="/img/sms-iphone.png" class="img-polaroid"></center></p>
                  <hr>
+                 Include your mobile number when paying and start using the service by sending requests to 608.467.1603!
                 <p><center>
                   <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
                   <input type="hidden" name="cmd" value="_s-xclick">
