added new landing page for SMS service. improved layout of index page.

--- a/public/sms.html
+++ b/public/sms.html
@@ -15,6 +15,7 @@
       body {
         padding-top: 60px;
         padding-bottom: 40px;
+        padding-left: 20px;
       }
     </style>
 
@@ -42,11 +43,6 @@
             <span class="icon-bar"></span>
           </a>
           <a class="brand" href="/#">SMSMyBus</a>
-          <div class="nav-collapse">
-            <ul class="nav">
-              <li><a href="http://api.smsmybus.com/">Developers!</a></li>
-            </ul>
-          </div>
           <div class="nav-collapse pull-right">
             <ul class="nav">
               <li><a href="http://hackingmadison.org">HackingMadison</a></li>
@@ -59,14 +55,9 @@
 
 
     <div class="container-fluid">
-      <div class="hero-unit">
-          <h1>SMSMyBus</h1>
-            <p>A text messaging application that lets you find real time bus arrivals for the <a class="description-anchor" href=http://www.cityofmadison.com/metro/>Madison Metro</a>.</p>
-      </div>
-
         <section id="resources">
-            <h1>The tools <small>Some of the tools in our toolbox</small></h1>
-            <p class="lead">There are a variety of ways you can find your bus when you're on the go. All of these tools give you real-time arrival estimates based on the actual location of your bus. Simply send the stop ID (and optionally the route) to one of the following services.</p>
+            <h1>Find your bus from anywhere! <small>608.467.1603</small></h1>
+            <p class="lead">A simple, fast, reliable way to get real-time arrival estimates for any bus in the city. Simply text the bus stop to 608.467.1603 and we'll reply with the results.</p>
             <div class="container-fluid">
               <div class="row-fluid">
                 <div class="span6">
@@ -83,11 +74,14 @@
             </div>
             <hr>
             <div class="row">
-              <div class="span4">
-                <h2>Text Messages <small>608.467.1603</small></h2>
-                 <p><i class="icon-heart"></i><strong> Give it a spin. The first few requests are free!</strong></p>
-                 <p><center><img src="/img/sms-iphone.png" class="img-polaroid"></center></p>
-                 Include your mobile number when paying and start using the service by sending requests to 608.467.1603!
+              <div class="span5">
+                <center>
+                <h3>Get Started. <br/>The first few requests are free!</h3>
+                 <p class="lead">608.467.1603</p>
+                 <p><img src="/img/sms-iphone.png" class="img-polaroid"></p>
+                </center>
+              </div>
+              <div class="span5">
                 <p><center>
                   <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
                   <input type="hidden" name="cmd" value="_s-xclick">
@@ -101,24 +95,7 @@
                 </center></p>
                 <p><center><a class="btn btn-success" href="/service-plan"><i class="icon-info-sign"> </i> Learn more</a></center></p>
               </div>
-              <div class="span4">
-                <h2>Google Chat</h2>
-                 <p><center><img src="/img/xmpp-example.png" class="img-polaroid"></center></p>
-                 <p><i class="icon-heart"></i><strong> Free!</strong> You can chat with the service just like a friend. Just send your request to <strong>smsmybus@appspot.com</strong> in your favorite chat software and I'll help you find your bus.</p>
-             </div>
-              <div class="span4">
-                <h2>Email</h2>
-                 <p><center><img src="/img/email-example.png" class="img-polaroid"></center></p>
-                <p><i class="icon-heart"></i><strong> Free!</strong> Don't like those other options? You can always use email! Just send your request to <strong><a href="mailto://request@smsmybus.com" target="_blank">request@smsmybus.com</a></strong> and I'll reply with the results.</p>
-              </div>
             </div>
-        </section>
-
-        <section id="api">
-            <hr>
-            <h1>Developers <small>Are you a developer interested in building your own bus app?</small></h1>
-            <p class="lead">The same tricks used for the text messaging tools are available in a programmable web interface. The API gives you access to all of the Metro data - including the real-time arrival estimates. </p>
-            <p class="lead">Get started now! <a href="http://api.smsmybus.com">http://api.smsmybus.com</a></p>
         </section>
 
         <div class="navbar navbar-fixed-bottom">
