added support for adwords campaign

--- a/public/thanks.html
+++ b/public/thanks.html
@@ -61,8 +61,8 @@
 
     <div class="container-fluid">
         <section id="resources">
-            <h1>Find your bus from anywhere! <small>608.467.1603</small></h1>
-            <p class="lead">A simple, fast, reliable way to get real-time arrival estimates for any bus in the city. Simply text the bus stop to 608.467.1603 and we'll reply with the results.</p>
+            <h1>Thank you for your payment! <small>608.467.1603</small></h1>
+            <p class="lead">Your account will be ready shortly. When it becomes active, you will be alerted with a text message to the number you provided. Email us anytime if we can help - help@smsmybus.com</p>
             <div class="container-fluid">
               <div class="row-fluid">
                 <div class="span6">
@@ -75,31 +75,6 @@
                   <p>Send the stop number</p>
                   <small>Example: Send <code>1101</code> to find all buses at stop 1101</small>
                 </div>
-              </div>
-            </div>
-            <hr>
-            <div class="row">
-              <div class="span5">
-                <center>
-                <h3>Get Started. <br/>The first few requests are free!</h3>
-                 <p class="lead">608.467.1603</p>
-                 <p><img src="/img/sms-iphone.png" class="img-polaroid"></p>
-                </center>
-              </div>
-              <div class="span5">
-                <p><center>
-                  <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
-                  <input type="hidden" name="cmd" value="_s-xclick">
-                  <input type="hidden" name="hosted_button_id" value="DZQ5NE43NHB2U">
-                  <table>
-                  <tr><td><input type="hidden" name="on0" value="Your mobile phone number">Your mobile phone number</td></tr><tr><td><input type="text" name="os0" maxlength="200"></td></tr>
-                  </table>
-                  <input type="hidden" name="return" value="http://www.smsmybus.com/thanks.html"/>
-                  <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-                  <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-                  </form>
-                </center></p>
-                <p><center><a class="btn btn-success" href="/service-plan"><i class="icon-info-sign"> </i> Learn more</a></center></p>
               </div>
             </div>
         </section>
@@ -134,5 +109,24 @@
 
     </script>
 
+    <!-- Google Code for SMB Subscription Conversion Page -->
+    <script type="text/javascript">
+    /* <![CDATA[ */
+    var google_conversion_id = 965928312;
+    var google_conversion_language = "en";
+    var google_conversion_format = "1";
+    var google_conversion_color = "ffffff";
+    var google_conversion_label = "YYhMCNDh9A4Q-MrLzAM";
+    var google_conversion_value = 0;
+    var google_remarketing_only = false;
+    /* ]]> */
+    </script>
+    <script type="text/javascript" src="//www.googleadservices.com/pagead/conversion.js">
+    </script>
+    <noscript>
+    <div style="display:inline;">
+    <img height="1" width="1" style="border-style:none;" alt="" src="//www.googleadservices.com/pagead/conversion/965928312/?value=0&amp;label=YYhMCNDh9A4Q-MrLzAM&amp;guid=ON&amp;script=0"/>
+    </div>
+    </noscript>
 
 </body></html>
