added callback page for paypal workflow

--- a/public/index.html
+++ b/public/index.html
@@ -90,6 +90,7 @@
                  Include your mobile number when paying and start using the service by sending requests to 608.467.1603!
                 <p><center>
                   <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
+                  <input type="hidden" name="return" value="http://www.smsmybus.com/thanks.html"/>
                   <input type="hidden" name="cmd" value="_s-xclick">
                   <input type="hidden" name="hosted_button_id" value="DZQ5NE43NHB2U">
                   <table>
