--- a/public/service-plan.html
+++ b/public/service-plan.html
@@ -78,6 +78,7 @@
           <h1>Get started</h1>
                 <p>
                   <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
+                  <input type="hidden" name="return" value="http://www.smsmybus.com/thanks.html"/>
                   <input type="hidden" name="cmd" value="_s-xclick">
                   <input type="hidden" name="hosted_button_id" value="DZQ5NE43NHB2U">
                   <table>
