added controllers to reach out to paying SMS users when their membership is expiring

--- a/public/sms.html
+++ b/public/sms.html
@@ -45,7 +45,7 @@
           <a class="brand" href="/#">SMSMyBus</a>
           <div class="nav-collapse">
             <ul class="nav">
-              <li><a href="http://api.smsmybus.com/">Developers!</a></li>
+              <a class="btn btn-success pull-right" href="mailto:help@smsmybus.com"><i class="icon-envelope"></i> Want to talk to a real person first? Email us!</a>
             </ul>
           </div>
           <div class="nav-collapse pull-right">
