attribute kiosk work to steve faulkner

--- a/public/kiosk/motherfools/index.html
+++ b/public/kiosk/motherfools/index.html
@@ -61,8 +61,9 @@
    </div>
 
    <div id="me">
-    <a href=http://www.gregtracy.com>Greg Tracy</a> - <a href=http://smsmybus.com>smsmybus</a> - <a href=http://twitter.com/gregtracy>@gregtracy</a><br>
-    <a href=http://imby.info/p/prestonaustin>Preston Austin - this interface</a> - <a href=http://twitter.com/gl33p>@gl33p</a>
+    Greg Tracy - <a href=http://smsmybus.com>smsmybus</a> - <a href=http://twitter.com/gregtracy>@gregtracy</a><br>
+    Steve Faulkner - this kiosk - <a href="http://twitter.com/southpolesteve">@southpolesteve</a><br>
+    Preston Austin - this interface - <a href=http://twitter.com/gl33p>@gl33p</a>
    </div>
   
    <div id="contact-container">
