port web references over to SSL/HTTPS

--- a/public/kiosk/motherfools/index.html
+++ b/public/kiosk/motherfools/index.html
@@ -10,7 +10,7 @@
 	  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <link href="/css/kiosk.css" type="text/css" rel="stylesheet" />
 
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script> 
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script> 
     <script type="text/javascript" src="/js/jquery.timers-1.2.js"></script>
     <script type="text/javascript" src="/js/kiosk.js"></script>
     
@@ -50,20 +50,20 @@
   <table class="resources">
     <tr>
       <td>
-        <img style="-webkit-user-select: none" src="https://chart.googleapis.com/chart?cht=qr&amp;chs=100x100&amp;chl=http://smsmybus.com/motherfools&chld=L|0">
+        <img style="-webkit-user-select: none" src="https://chart.googleapis.com/chart?cht=qr&amp;chs=100x100&amp;chl=https://smsmybus.com/motherfools&chld=L|0">
       </td>
       <td>This is an experimental effort to offer you real-time bus information while you enjoy your coffee! Your feedback on the accuracy and value of the information will help improve the service.<br/>Special thanks to The City of Madison for great buses and for providing the GPS data that powers this service</td>
     </tr>
   </table>
    <div id="powered-by">
      <a href=http://mymetrobus.com><img src="/img/madison_metro.png" alt="Madison Metro" height="30"></a>
-     <a href=http://smsmybus.com><img src="/img/smsmybus.png" alt="smsmybus.com logo" height="30"></a>
+     <a href=https://smsmybus.com><img src="/img/smsmybus.png" alt="smsmybus.com logo" height="30"></a>
    </div>
 
    <div id="me">
-    Greg Tracy - <a href=http://smsmybus.com>smsmybus</a> - <a href=http://twitter.com/gregtracy>@gregtracy</a><br>
-    Steve Faulkner - this kiosk - <a href="http://twitter.com/southpolesteve">@southpolesteve</a><br>
-    Preston Austin - this interface - <a href=http://twitter.com/gl33p>@gl33p</a>
+    Greg Tracy - <a href=https://smsmybus.com>smsmybus</a> - <a href=https://twitter.com/gregtracy>@gregtracy</a><br>
+    Steve Faulkner - this kiosk - <a href="https://twitter.com/southpolesteve">@southpolesteve</a><br>
+    Preston Austin - this interface - <a href=https://twitter.com/gl33p>@gl33p</a>
    </div>
   
    <div id="contact-container">
