--- a/public/kiosk/supranet/index.html
+++ b/public/kiosk/supranet/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-GB">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "https://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="https://www.w3.org/1999/xhtml" xml:lang="en-GB">
 <head>
     <meta name="description" content="A telephone application that checks Madison bus schedules in real time.">
     <meta name="keywords" content"Twilio, bus schedule, SMS, google app engine, cloud computing, telephone, telephony, smsmybus">
@@ -10,7 +10,7 @@
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <link href="/css/kiosk.css" type="text/css" rel="stylesheet" />
 
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script> 
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script> 
     <script type="text/javascript" src="/js/jquery.timers-1.2.js"></script>
     <script type="text/javascript" src="/js/kiosk.js"></script>
     
@@ -50,12 +50,12 @@ Your feedback on the accuracy and value of the information will help improve the
 
    <div id="powered-by">
      <a href=http://mymetrobus.com><img src="/img/madison_metro.png" alt="Madison Metro" height="30"></a>
-     <a href=http://smsmybus.com><img src="/img/smsmybus.png" alt="smsmybus.com logo" height="30"></a>
+     <a href=https://smsmybus.com><img src="/img/smsmybus.png" alt="smsmybus.com logo" height="30"></a>
    </div>
 
    <div id="me">
-    <a href=http://www.gregtracy.com>Greg Tracy</a> - <a href=http://smsmybus.com>smsmybus</a> - <a href=http://twitter.com/gregtracy>@gregtracy</a><br>
-    <a href=http://imby.info/p/prestonaustin>Preston Austin - this interface</a> - <a href=http://twitter.com/gl33p>@gl33p</a>
+    <a href=http://www.gregtracy.com>Greg Tracy</a> - <a href=https://smsmybus.com>smsmybus</a> - <a href=https://twitter.com/gregtracy>@gregtracy</a><br>
+    <a href=https://twitter.com/gl33p>Preston Austin - this interface</a> - <a href=https://twitter.com/gl33p>@gl33p</a>
    </div>
   
    <div id="contact-container">
