--- a/public/sms.html
+++ b/public/sms.html
@@ -21,7 +21,7 @@
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+      <script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
     <!-- Le fav and touch icons -->
@@ -50,7 +50,7 @@
           </div>
           <div class="nav-collapse pull-right">
             <ul class="nav">
-              <li><a href="http://hackingmadison.org">HackingMadison</a></li>
+              <li><a href="https://hackingmadison.org">HackingMadison</a></li>
               <li><a href="http://blog.gregtracy.com">Greg Tracy</a></li>
             </ul>
           </div><!--/.nav-collapse -->
@@ -94,7 +94,7 @@
                   <table>
                   <tr><td><input type="hidden" name="on0" value="Your mobile phone number">Your mobile phone number</td></tr><tr><td><input type="text" name="os0" maxlength="200"></td></tr>
                   </table>
-                  <input type="hidden" name="return" value="http://www.smsmybus.com/thanks.html"/>
+                  <input type="hidden" name="return" value="https://www.smsmybus.com/thanks.html"/>
                   <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
                   <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
                   </form>
