--- a/public/thanks.html
+++ b/public/thanks.html
@@ -21,7 +21,7 @@
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+      <script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
     <!-- Le fav and touch icons -->
@@ -45,12 +45,12 @@
           <a class="brand" href="/#">SMSMyBus</a>
           <div class="nav-collapse">
             <ul class="nav">
-              <li><a href="http://api.smsmybus.com/">Developers!</a></li>
+              <li><a href="https://api.smsmybus.com/">Developers!</a></li>
             </ul>
           </div>
           <div class="nav-collapse pull-right">
             <ul class="nav">
-              <li><a href="http://hackingmadison.org">HackingMadison</a></li>
+              <li><a href="https://hackingmadison.org">HackingMadison</a></li>
               <li><a href="http://blog.gregtracy.com">Greg Tracy</a></li>
             </ul>
           </div><!--/.nav-collapse -->
