--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+      <script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
     <!-- Le fav and touch icons -->
@@ -44,13 +44,13 @@
           <a class="brand" href="/#">SMSMyBus</a>
           <div class="nav-collapse">
             <ul class="nav">
-              <li><a href="http://api.smsmybus.com/">Developers!</a></li>
+              <li><a href="https://api.smsmybus.com/">Developers!</a></li>
             </ul>
           </div>
           <div class="nav-collapse pull-right">
             <ul class="nav">
-              <li><a href="http://hackingmadison.org">HackingMadison</a></li>
-              <li><a href="http://blog.gregtracy.com">Greg Tracy</a></li>
+              <li><a href="https://hackingmadison.org">HackingMadison</a></li>
+              <li><a href="https://blog.gregtracy.com">Greg Tracy</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
@@ -61,7 +61,7 @@
     <div class="container-fluid">
       <div class="hero-unit">
           <h1>SMSMyBus</h1>
-            <p>A text messaging application that lets you find real time bus arrivals for the <a class="description-anchor" href=http://www.cityofmadison.com/metro/>Madison Metro</a>.</p>
+            <p>A text messaging application that lets you find real time bus arrivals for the <a class="description-anchor" href=https://www.cityofmadison.com/metro/>Madison Metro</a>.</p>
       </div>
 
         <section id="resources">
@@ -90,7 +90,7 @@
                  Include your mobile number when paying and start using the service by sending requests to 608.467.1603!
                 <p><center>
                   <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
-                  <input type="hidden" name="return" value="http://www.smsmybus.com/thanks.html"/>
+                  <input type="hidden" name="return" value="https://www.smsmybus.com/thanks.html"/>
                   <input type="hidden" name="cmd" value="_s-xclick">
                   <input type="hidden" name="hosted_button_id" value="DZQ5NE43NHB2U">
                   <table>
@@ -119,7 +119,7 @@
             <hr>
             <h1>Developers <small>Are you a developer interested in building your own bus app?</small></h1>
             <p class="lead">The same tricks used for the text messaging tools are available in a programmable web interface. The API gives you access to all of the Metro data - including the real-time arrival estimates. </p>
-            <p class="lead">Get started now! <a href="http://api.smsmybus.com">http://api.smsmybus.com</a></p>
+            <p class="lead">Get started now! <a href="https://api.smsmybus.com">https://api.smsmybus.com</a></p>
         </section>
 
         <div class="navbar navbar-fixed-bottom">
