--- a/public/kiosk/sector67/index.html
+++ b/public/kiosk/sector67/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-GB">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "https://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="https://www.w3.org/1999/xhtml" xml:lang="en-GB">
 <head>
     <meta name="description" content="A telephone application that checks Madison bus schedules in real time.">
     <meta name="keywords" content"Twilio, bus schedule, SMS, google app engine, cloud computing, telephone, telephony, smsmybus, sector67, hackerspace, maker">
@@ -10,7 +10,7 @@
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <link href="/css/kiosk.css" type="text/css" rel="stylesheet" />
 
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script> 
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script> 
     <script type="text/javascript" src="/js/jquery.timers-1.2.js"></script>
     <script type="text/javascript" src="/js/kiosk.js"></script>
     
@@ -61,13 +61,13 @@
 
    <div id="powered-by">
      <img src="/img/madison_metro.png" alt="Madison Metro" height="30" onClick="refreshTimes('6490', 'manual refreshed east')">
-     <img src="http://www.smsmybus.com/img/gae-logo.png" alt="google app engine" height="30" width="30" onClick="refreshTimes('1382', 'manual refreshed west')">
+     <img src="https://www.smsmybus.com/img/gae-logo.png" alt="google app engine" height="30" width="30" onClick="refreshTimes('1382', 'manual refreshed west')">
      <img src="/img/smsmybus.png" alt="smsmybus.com logo" height="30">
    </div>
 
    <div id="me">
-    <a href=http://www.gregtracy.com>Greg Tracy - smsmybus</a> - <a href=http://twitter.com/gregtracy>@gregtracy</a><br>
-    <a href=http://imby.info/p/prestonaustin>Preston Austin - this interface</a> - <a href=http://twitter.com/gl33p>@gl33p</a>
+    <a href=http://www.gregtracy.com>Greg Tracy - smsmybus</a> - <a href=https://twitter.com/gregtracy>@gregtracy</a><br>
+    <a href=https://twitter.com/gl33p>Preston Austin - this interface</a> - <a href=https://twitter.com/gl33p>@gl33p</a>
    </div>
   
    <div id="contact-container">
