--- a/public/service-plan.html
+++ b/public/service-plan.html
@@ -20,7 +20,7 @@
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+      <script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
     <!-- Le fav and touch icons -->
@@ -78,7 +78,7 @@
           <h1>Get started</h1>
                 <p>
                   <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
-                  <input type="hidden" name="return" value="http://www.smsmybus.com/thanks.html"/>
+                  <input type="hidden" name="return" value="https://www.smsmybus.com/thanks.html"/>
                   <input type="hidden" name="cmd" value="_s-xclick">
                   <input type="hidden" name="hosted_button_id" value="DZQ5NE43NHB2U">
                   <table>
